# djangocms-text-ckeditor5

./: .editorconfig  CHANGELOG.rst  LICENSE  README.rst  package-lock.json  package.json  pyproject.toml  setup.cfg  tox.ini  webpack.config.js
.github/workflows/: codeql.yml  frontend.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
djangocms-text-ckeditor5/: __init__.py
djangocms_text_ckeditor5/: __init__.py
djangocms_text_ckeditor5/static/djangocms_text/css/: cms.ckeditor5.css
djangocms_text_ckeditor5/static/djangocms_text_ckeditor5/css/: cms.ckeditor5.css  cms.linkfield.css
private/js/: cms.ckeditor5.js
private/js/ckeditor5_plugins/ckeditor5-cmsplugins/: index.js
private/js/ckeditor5_plugins/ckeditor5-cmsplugins/src/: cmsplugincommand.js  cmspluginediting.js  cmspluginui.js
private/js/ckeditor5_plugins/ckeditor5.cmslink/: index.js
private/js/ckeditor5_plugins/ckeditor5.cmslink/src/: cmsLink.js
private/js/ckeditor5_plugins/ckeditor5.cmsplugin/: index.js
private/js/ckeditor5_plugins/ckeditor5.cmsplugin/src/: cmsplugin.js  cmspluginediting.js  cmspluginui.js
private/js/ckeditor5_plugins/ckeditor5.cmsplugin/src/modal/: modalui.js
private/js/ckeditor5_plugins/cms-link/: index.js
private/js/ckeditor5_plugins/cms-link/src/: cms.linkfield.js  cmsLink.js  linksuggestionediting.js
private/js/ckeditor5_plugins/cms.link/src/: cms.linkfield.js
