[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djangocms-text-ckeditor5"
dynamic = ["version"]
description = "CKEditor 5 Rich Text Plugin for django CMS"
readme = "README.rst"
license = {text = "LGPL 2" }
requires-python = ">=3.9"
authors = [
    { name = "Django CMS Association and contributors", email = "info@django-cms.org" },
]
maintainers = [
    { name = "Django CMS Association and contributors", email = "info@django-cms.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django CMS",
    "Framework :: Django CMS :: 3.11",
    "Framework :: Django CMS :: 4.0",
    "Framework :: Django CMS :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "djangocms-text",
]

[tool.setuptools]
packages = ["djangocms_text_ckeditor5"]

[project.urls]
Homepage = "https://github.com/django-cms/djangocms-text-ckeditor5"

[tool.hatch.version]
path = "djangocms_text_ckeditor5/__init__.py"

[tool.hatch.build]
include = [
    "/djangocms_text_ckeditor5",
]
artifacts = [
    "djangocms_text_ckeditor5/static/**",
]

[tool.ruff]
line-length = 120
indent-width = 4
